# machinelearning-melissa

./: .flake8  .gitignore  .lefthook.yml  README.md  lefthook.yml  main.py  mlflow.db  pyproject.toml  run_all_networks.sh  setup_project.py
dev/: helpers.py
models/: CNN.py  DNN.py  cnn.py  neural_network.py
networks/: CNN.py  NN.py  RNN.py
notebooks/: CNN.ipynb  Les4.ipynb  les1.ipynb  les2.ipynb  les3.ipynb  les4.ipynb  les5.ipynb  mlflow.db
