[project]
name = "machinelearning-melissa"
version = "0.1.0"
description = "MADS-Machinelearning-course"
authors = [{ name = "Melissa", email = "32540532+Mestix@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "jupyter",
    "lefthook>=1.11.11",
    "mads-datasets>=0.3.12",
    "mltrainer>=0.1.129",
    "tensorboard>=2.19.0",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.6.0",
    "seaborn>=0.13.2",
    "ruff>=0.11.8",
    "mypy>=1.15.0",
]

[tool.uv]
# Optioneel
