[project]
name = "machinelearning-melissa"
version = "0.1.0"
description = "MADS-Machinelearning-course"
authors = [{ name = "Melissa", email = "32540532+Mestix@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "jupyter",
    "lefthook>=1.11.11",
    "mads-datasets>=0.3.12",
    "tensorboard>=2.19.0",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.6.0",
    "seaborn>=0.13.2",
    "ruff>=0.11.8",
    "mypy>=1.15.0",
    "nbstripout>=0.8.1",
    "black>=25.1.0",
    "mlflow>=2.21.3",
    "hyperopt>=0.2.7",
    "toml>=0.10.2",
    "mltrainer>=0.1.129",
    "ray>=2.46.0",
    "types-toml>=0.10.8.20240310",
]

[tool.uv]
# Optioneel
